# Bigdata

./: .gitignore  README.md  analyze_clusters.py  app.py  gunicorn.conf.py  migrate_reference_data.py  prepare_models.py  pyproject.toml  requirements.txt
models/: .gitkeep  kmeans_model.pkl  scaler.pkl
notebook/: notebook.ipynb
static/css/: style.css
static/js/: analyse_marche.js  cartographie.js  estimation.js  opportunites.js  similaires.js
templates/: analyse_marche.html  base.html  cartographie.html  clusters.html  estimation.html  index.html  landing.html  login.html  opportunites.html  profile.html  register.html  similaires.html
utils/: __init__.py  auth.py  clustering.py  data_loader.py  db.py  opportunities.py  predictor.py  recommendations.py
