[project]
name = "clustering-immo-app"
version = "0.1.0"
description = "Application Flask pour l'analyse immobilière par clustering"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.18.0",
    "hdbscan>=0.8.33",
    "scipy>=1.11.0",
    "requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
